--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,32 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <!-- Вынес html-шаблоны текста в файлы ресрусов: светлая и тёмные темы соответственно-->
+    <!-- Вместо %s вставляется текст карточки-->
+    <!-- <![CDATA[]] нужен для того, чтобы при использовании строкового ресурса в коде программы он
+    интерпретировался как корректный код html-->
+
+    <string name="ReferenceItemModeNightNoTemplate">
+    <![CDATA[<html>
+        <head>
+            <style>p { text-indent: 25px; }</style>
+        </head>
+        <body style="text-align: justify;">
+            %s
+        </body>
+    </html>]]>
+    </string>
+
+    <string name="ReferenceItemModeNightYesTemplate">
+    <![CDATA[<html>
+        <head>
+            <style>p { text-indent: 25px; }</style>
+        </head>
+        <body style="text-align: justify;">
+            <font color="white"/>
+            %s
+        </body>
+    </html>]]>
+</string>
 </resources>
