--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
+    <string name="NoInternetConnectionToast">Check your internet connection to refresh the reference</string>
+
     <!-- Вынес html-шаблоны текста в файлы ресрусов: светлая и тёмные темы соответственно-->
     <!-- Вместо %s вставляется текст карточки-->
     <!-- <![CDATA[]] нужен для того, чтобы при использовании строкового ресурса в коде программы он
