--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="noInternetConnectionToast">Check your internet connection to refresh the reference</string>
     <string name="internetConnectionLostMessage">We lost network access while downloading data</string>
 
-    <string name="loadingLatestArticlesMessage">Loading tha latest articles. Please wait for a while</string>
+    <string name="loadingLatestArticlesMessage">Loading the latest articles. Please wait for a while</string>
 
     <!-- Вынес html-шаблоны текста в файлы ресурсов: светлая и тёмные темы соответственно-->
     <!-- Вместо %s вставляется текст карточки-->
